# uv-led-platform

./: .env.example  .gitignore  AGENT_PROFILE.md  README.md  setup_agent.py
args/: default.yaml
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: config.py  db.py  graph.py
backend/db/: README.md  schema.sql
backend/scripts/: run_once.py  run_research_loop.py
context/: README.md
data/: activity.db  memory.db
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ResearchList.tsx
frontend/lib/: supabaseClient.ts
gemini/: gemini.md
goals/: manifest.md
memory/: MEMORY.md
memory/logs/: 2026-02-08.md
tools/: manifest.md
